Added tests and documentation.
Fully working project ready for use.